# theter-assesment

./: CMakeLists.txt  main.cpp
src/client/: TradingClient.cpp  TradingClient.h
src/communication_channel/: ChannelFactory.h  IChannelBase.h  IClientToEngineChannel.h  IEngineToClientChannel.h
src/communication_channel/in_memory_channel/: ThreadSafeQueueChannel_ClientToEngine.cpp  ThreadSafeQueueChannel_ClientToEngine.h  ThreadSafeQueueChannel_EngineToClient.cpp  ThreadSafeQueueChannel_EngineToClient.h
src/matching_engine/: MatchingEngine.cpp  MatchingEngine.h  OrderBook.cpp  OrderBook.h
src/messages/: IMessageHandler.h  Message.cpp  Message.h
src/messages/client_messages/: CancelOrderMsg.cpp  CancelOrderMsg.h  ClientMsg.cpp  ClientMsg.h  PlaceOrderMsg.cpp  PlaceOrderMsg.h
src/messages/handler/: ClientMessageHandler.h  MessageHandler.cpp  MessageHandler.h
src/messages/matching_engine_messages/: MatchingEngineMsg.cpp  MatchingEngineMsg.h  OrderCanceledMsg.h  OrderPlacedMsg.h  OrderTradedMsg.cpp  OrderTradedMsg.h  RequestRejectedMsg.cpp  RequestRejectedMsg.h
src/orders/: Order.cpp  Order.h
src/utils/: IdGenerator.cpp  IdGenerator.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h
